OrgMan/force-app/main/default/objects/MyOrg__c/MyOrg__c.object-meta.xml
<CustomObject>
    <label>MyOrg</label>
    <nameField>
        <label>MyOrg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyOrgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>