OrgMan/force-app/main/default/objects/MyOrg__c/fields/Link4Org__c.field-meta.xml
<CustomField>
    <fullName>Link4Org__c</fullName>
    <formula>HYPERLINK (Login_URL__c + &#39;/?un=&#39; +  Username__c + &#39;&amp;pw=&#39; +  Password__c, IMAGE(&#39;/resource/LoginButton&#39;,  $Label.Login_label) , &#39;_blank&#39;)</formula>
    <label>Link for Org</label>
    <type>Text</type>
</CustomField>