OrgMan/force-app/main/default/objects/MyOrg__c/fields/Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Login_URL__c</fullName>
    <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
    <label>Login URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>