OrgMan/force-app/main/default/objects/MyOrg__c/fields/Org_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Org_Name_formula__c</fullName>
    <formula>Name</formula>
    <label>Org Name</label>
    <type>Text</type>
</CustomField>