OrgMan/force-app/main/default/objects/MyOrg__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>HYPERLINK (&#39;/&#39; + Id,  $Label.Detail_Label)</formula>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>