OrgMan/force-app/main/default/objects/MyOrg__c/validationRules/URL_Must_not_end_with_slash.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_Must_not_end_with_slash</fullName>
    <active>true</active>
    <errorConditionFormula>RIGHT (Login_URL__c, 1) = &#39;/&#39;</errorConditionFormula>
    <errorDisplayField>Login_URL__c</errorDisplayField>
    <errorMessage>Login URL must NOT end with &#39;/&#39;.</errorMessage>
</ValidationRule>