OrgMan/force-app/main/default/objects/MyOrg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Org_Name_formula__c</columns>
    <columns>Link4Org__c</columns>
    <columns>Login_URL__c</columns>
    <columns>Username__c</columns>
    <columns>Record_Link__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>